# ClashMetaForAndroid

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  BROADCAST_RECEIVER_WORKING.md  BUILD_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  NINJA_UPGRADE_CHECKLIST.md  PR_GUIDE.md  README.md  README_CN.md  ROADMAP.md  SETUP_COMPLETE.md  SUCCESS.md  TASKER_GUIDE.md  build.gradle.kts  build.sh  check-env.sh  gradle.properties  prepare-pr.sh  release.keystore  settings.gradle.kts
.github/: renovate.json5
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/workflows/: android-ci.yml  build-debug.yaml  build-pre-release.yaml  build-release.yaml  build.yml  prerelease-dev.yml  release.yml  update-dependencies.yaml  update-go-dependencies.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: clashfest_shield_foreground.xml  clashfest_shield_monochrome.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_qs_tile.xml
app/src/main/res/layout/: bottom_sheet_profile_quick_edit.xml  bottom_sheet_rules_create.xml  dialog_new_profile_meta.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml  yume_round.xml
app/src/main/res/mipmap-anydpi-v33/: ic_launcher_round.xml
app/src/main/res/values/: clash_background.xml  ids.xml  strings.xml  yume_background.xml
app/src/main/res/values-night/: ic_launcher_background.xml
app/src/main/res/xml/: data_extraction_rules.xml  full_backup_content.xml  locales_config.xml  widget_speed_info.xml
common/: build.gradle.kts
common/src/main/res/values/: strings.xml
core/: build.gradle.kts
core/src/foss/golang/: go.mod  go.sum
core/src/main/cpp/: CMakeLists.txt  main.c
core/src/main/golang/: go.mod  go.sum
core/src/main/golang/native/: app.go  bridge.c  bridge.h  config.go  geo.go  log.go  main.go  proxy.go  tun.go  tunnel.go  utils.go
core/src/main/res/values/: strings.xml
design/: build.gradle.kts
design/gradle/fvv/: editorconfig
design/lang/en/: Common.fvv
design/lang/en/Pages/: About.fvv  AccessControl.fvv  ApkBroken.fvv  AppCrashed.fvv  AppSettings.fvv  Files.fvv  Help.fvv  KeyValueEditor.fvv  ListEditor.fvv  Logcat.fvv  Logs.fvv  MetaFeatureSettings.fvv  NetworkSettings.fvv  NewProfile.fvv  OverrideSettings.fvv  Profiles.fvv  Properties.fvv  Providers.fvv  Proxy.fvv  Settings.fvv
design/lang/ja/: Common.fvv
design/lang/ja/Pages/: About.fvv  AccessControl.fvv  ApkBroken.fvv  AppCrashed.fvv  AppSettings.fvv  Files.fvv  Help.fvv  KeyValueEditor.fvv  ListEditor.fvv  Logcat.fvv  Logs.fvv  MetaFeatureSettings.fvv  NetworkSettings.fvv  NewProfile.fvv  OverrideSettings.fvv  Profiles.fvv  Properties.fvv  Providers.fvv  Proxy.fvv  Settings.fvv
design/lang/zh/: Common.fvv
design/lang/zh/Pages/: AppCrashed.fvv  AppSettings.fvv  Files.fvv  Help.fvv  KeyValueEditor.fvv  MetaFeatureSettings.fvv  NetworkSettings.fvv  NewProfile.fvv  OverrideSettings.fvv  Providers.fvv
design/lang/zh_CN/Pages/: About.fvv  AccessControl.fvv  ApkBroken.fvv  ListEditor.fvv  Logcat.fvv  Logs.fvv  Profiles.fvv  Properties.fvv  Proxy.fvv  Settings.fvv
design/src/main/res/animator/: focus_scale.xml
design/src/main/res/color/: selector_bottom_nav_item.xml
design/src/main/res/drawable/: bg_announcement_new_dot.xml  bg_announcement_sheet_source_pill.xml  bg_bottom_nav_item.xml  bg_bottom_sheet.xml  bg_connect_idle.xml  bg_delay_bad.xml  bg_delay_good.xml  bg_delay_medium.xml  bg_delay_timeout.xml  bg_home_canvas.xml  bg_home_card_soft.xml  bg_m3_delay_chip.xml  bg_m3_expiry_chip_warning.xml  bg_m3_policy_chip_direct.xml  bg_m3_segment_container.xml  bg_m3_status_chip.xml  bg_m3_status_chip_neutral.xml  bg_main_gradient.xml  (+47 more)
docs/: config.yaml  errors.md  path-b-engine-parsing.md  security-smoke-checklist.md  subscription-hwid-and-share-policy.md  supported-headers.md
docs/operator-api/: README.md  branding-quickstart.md  headers.md  security.md  template-variables.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
service/: build.gradle.kts
service/src/main/: AndroidManifest.xml
(+635 files in other folders)
